--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,8 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .logo-link {
@@ -77,6 +79,8 @@ body {
   background: #4d5ae5;
   color: white;
   cursor: pointer;
+  border: 1px solid transparent;
+  display: inline-block;
 }
 
 .btn-portfolio:hover,
@@ -165,6 +169,8 @@ body {
   letter-spacing: var(--letter-spacing);
   text-transform: capitalize;
   color: #2e2f42;
+  display: flex;
+  text-align: center;
 }
 
 /*====== section 4 =====*/
@@ -198,4 +204,53 @@ body {
   line-height: 1.5;
   letter-spacing: var(--letter-spacing);
   color: #f4f4fd;
+}
+.section {
+padding-left: 156px;
+padding-right: 156px;
+padding-bottom: 120px
+}
+.container {
+
+
+margin: 0;
+padding: 0;
+
+}
+
+.box-header {
+  display: flex;
+padding-left: 156px;
+padding-right: 156px;
+ padding-top: 24px;
+  padding-bottom: 24px;
+  text-align: center;
+}
+.nav-item {
+  display: flex;
+
+  padding: 0;
+  margin: 0;
+  margin-left: 76px;
+  margin-right: 332px;
+ 
+}
+.nav-item .item:not(:last-child) {
+  margin-right: 40px;
+}
+  .menu-contacts .contacts:first-child {
+  margin-right: 40px;
+  }
+  
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
+/*===удалить в индекс тоже клас.img-list {
+display: flex;
+}*/
+.list-img {
+display: flex;
 }
