--- a/css/styles.css
+++ b/css/styles.css
@@ -116,27 +116,25 @@ body {
 
 .nav-item {
   display: flex;
- 
+ padding: 0;
   margin: 0;
   margin-right: 332px;
   text-align: center;
-  padding: 24px 0;
+  gap: 40px;
 }
 
-.nav-item .item:not(:last-child) {
-  margin-right: 40px;
-}
+
+
 
 .menu-contacts {
   display: flex;
   text-align: center;
   padding: 0;
   margin: 0;
+  gap: 40px;
 }
 
-.menu-contacts .contacts:first-child {
-  margin-right: 40px;
-}
+
 
 .menu-contact,
 .addres {
@@ -156,8 +154,9 @@ width: 100%;
 /*====== section 1====*/
 .section-one {
   background-color: #2e2f42;
+  margin: 0;
   padding: 188px 0;
-  flex-direction: column;
+  
 }
 
 .title {
@@ -165,13 +164,14 @@ width: 100%;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  
+  display: block;
   letter-spacing: var(--letter-spacing);
   margin: 0;
   margin-bottom: 48px;
   color: #ffffff;
   max-width: 496px;
-
+  padding: 0;
+  
 }
 
 .btn:hover,
@@ -196,6 +196,7 @@ width: 100%;
    height: 56px;
    border: none;
    
+   
   
 }
 
@@ -205,6 +206,9 @@ width: 100%;
 
 
 /*====== section 2 ======*/
+.section-two {
+padding: 120px 0;
+}
 
 .visually-hidden {
  position: absolute;
@@ -221,11 +225,15 @@ overflow: hidden;
 
 .list-two {
   display: flex;
+  
+  padding: 0;
+  gap: 24px;
 }
 
 
 .list-next {
 width: calc((100% - 72px) / 4);
+
 }
 
 .title-three-index {
@@ -247,16 +255,18 @@ width: calc((100% - 72px) / 4);
   letter-spacing: var(--letter-spacing);
   color: var(--primary-color);
   text-align: left;
-  width: 258px;
+  width: 264px;
 }
 
-.list-next:not(:last-child) {
-  margin-right: 24px;
-}
 
 /*===== section 3 =====*/
 
-
+.section-three {
+padding-bottom: 120px;
+}
+.container-three{
+flex-direction: column;
+}
 .list-img {
   display: flex;
 justify-content: center;
@@ -280,6 +290,9 @@ text-align: center;
 }
 
 /*====== section 4 =====*/
+.cont-four {
+flex-direction: column;
+}
 
 .list-img-four{
 gap: 24px;
@@ -334,7 +347,6 @@ width: calc((100% - 72px) / 4);
 padding: 100px 0;
   border: 1px;
   background-color: #2e2f42;
-
 }
 
 .logo-footer {
@@ -449,8 +461,8 @@ p {
 
 .container {
  
-  
-  margin: auto;
+
+  margin: 0 auto;
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
