--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,10 @@ body {
   border-bottom: 1px solid #e7e9fc;
 }
 
+.container-header {
+  display: flex;
+}
+
 .nav-header {
   display: flex;
   align-items: center;
@@ -111,19 +115,17 @@ body {
   line-height: 1.5;
   letter-spacing: var(--letter-spacing);
   color: #2e2f42;
-
+  padding: 24px 0;
 }
 
 .nav-item {
   display: flex;
- padding: 0;
+  padding: 0;
   margin: 0;
   margin-right: 332px;
   text-align: center;
   gap: 40px;
 }
-
-
 
 
 .menu-contacts {
@@ -145,10 +147,11 @@ body {
   letter-spacing: var(--letter-spacing);
   color: var(--primary-color);
 }
+
 img {
-display: block;
-width: 100%;
- 
+  display: block;
+  width: 100%;
+
 }
 
 /*====== section 1====*/
@@ -156,7 +159,7 @@ width: 100%;
   background-color: #2e2f42;
   margin: 0;
   padding: 188px 0;
-  
+
 }
 
 .title {
@@ -171,7 +174,7 @@ width: 100%;
   color: #ffffff;
   max-width: 496px;
   padding: 0;
-  
+
 }
 
 .btn:hover,
@@ -193,46 +196,41 @@ width: 100%;
   border-radius: 4px;
   display: block;
   min-width: 169px;
-   height: 56px;
-   border: none;
-   
-   
-  
+  height: 56px;
+  border: none;
+
 }
-
-
-
 
 
 
 /*====== section 2 ======*/
 .section-two {
-padding: 120px 0;
+  padding: 120px 0;
 }
 
 .visually-hidden {
- position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .list-two {
   display: flex;
-  
+
   padding: 0;
   gap: 24px;
 }
 
 
 .list-next {
-width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 
 }
 
@@ -262,17 +260,19 @@ width: calc((100% - 72px) / 4);
 /*===== section 3 =====*/
 
 .section-three {
-padding-bottom: 120px;
+  padding-bottom: 120px;
 }
-.container-three{
-flex-direction: column;
+
+.container-three {
+  flex-direction: column;
 }
+
 .list-img {
   display: flex;
-justify-content: center;
+  justify-content: center;
 
-padding: 0;
-gap: 24px;
+  padding: 0;
+  gap: 24px;
 }
 
 .title-two {
@@ -284,41 +284,42 @@ gap: 24px;
   letter-spacing: var(--letter-spacing);
   text-transform: capitalize;
   color: #2e2f42;
-text-align: center;
+  text-align: center;
   margin-bottom: 72px;
 
 }
 
 /*====== section 4 =====*/
 .cont-four {
-flex-direction: column;
+  flex-direction: column;
 }
 
-.list-img-four{
-gap: 24px;
-}
 .list-img-four {
-display: flex;
+  gap: 24px;
+}
+
+.list-img-four {
+  display: flex;
   text-align: center;
   margin: 0;
   padding: 0;
 }
 
 .section-four {
-  
+
   margin: 0;
   background-color: #f4f4fd;
-padding: 120px 0;
+  padding: 120px 0;
 }
 
 .section-four-list {
-width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
 }
 
 .card-cont {
- padding: 32px 16px;
+  padding: 32px 16px;
 }
 
 .title-card {
@@ -344,7 +345,7 @@ width: calc((100% - 72px) / 4);
 /*=======footer======*/
 
 .footer {
-padding: 100px 0;
+  padding: 100px 0;
   border: 1px;
   background-color: #2e2f42;
 }
@@ -385,7 +386,7 @@ padding: 100px 0;
   justify-content: center;
   margin-top: 96px;
   margin-bottom: 72px;
-} 
+}
 
 
 .button-pf:not(:last-child) {
@@ -410,7 +411,7 @@ padding: 100px 0;
   line-height: 1.5;
   letter-spacing: var(--letter-spacing);
   color: var(--primary-color);
-  
+
 
   text-align: left;
 }
@@ -420,21 +421,22 @@ padding: 100px 0;
 
   display: flex;
   flex-wrap: wrap;
- 
-  column-gap: 24px; 
+
+  column-gap: 24px;
   row-gap: 48px;
+  padding: 0;
 
 }
 
 .card-set {
- width:  calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 
 .img-card {
   padding: 32px 16px;
-  border: 1px solid #e7e9fc; 
-  border-top: none; 
+  border: 1px solid #e7e9fc;
+  border-top: none;
 
 }
 
@@ -449,18 +451,12 @@ p {
 
 .section {
 
-  margin: 0;
-  padding: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-  
-  padding-top: 96px; 
+  padding-top: 96px;
   padding-bottom: 120px;
 
 }
 
 .container {
- 
 
   margin: 0 auto;
   width: 1158px;
