--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ body {
 
 .nav-header {
   display: flex;
+  align-items: center;
 }
 
 .menu-item {
@@ -130,7 +131,10 @@ body {
   display: flex;
   padding: 0;
   margin: 0;
-  gap: 40px;
+}
+
+.contacts:not(:last-child) {
+margin-right: 40px;
 }
 
 .menu-contact {
@@ -264,7 +268,6 @@ img {
 .list-img {
   display: flex;
   justify-content: center;
-
   padding: 0;
   gap: 24px;
 }
