--- a/css/styles.css
+++ b/css/styles.css
@@ -52,13 +52,14 @@ body {
   color: #404bbf;
 }
 
-.menu-contact:hover,
-.menu-contact:focus {
+.menu-cont:hover,
+.menu-cont:focus {
   color: #404bbf;
 }
 
 .addres {
   font-style: normal;
+  margin-left: auto;
 }
 
 /*=========== buttons ======*/
@@ -130,14 +131,11 @@ body {
 .menu-contacts {
   display: flex;
   padding: 0;
-  margin: 0;
+  gap: 40px;
 }
 
-.contacts:not(:last-child) {
-margin-right: 40px;
-}
 
-.menu-contact {
+.menu-cont {
   font-family: var(--primary-font);
   font-weight: var(--font-weight);
   font-size: 16px;
