--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--letter-spacing);
   color: #2e2f42;
-  padding: 24px 0;
+ 
 }
 
 .nav-item {
@@ -118,7 +118,6 @@ body {
   padding: 0;
   margin: 0;
   margin-right: 332px;
-  text-align: center; 
   gap: 40px;
 }
 
@@ -129,9 +128,12 @@ padding: 24px 0;
 .menu-contacts {
   display: flex;
  padding: 0;
-  gap: 40px;
+  margin: 0;
 }
 
+.cont:not(:last-child) {
+  margin-right: 40px;
+}
 
 .menu-cont {
   font-family: var(--primary-font);
