--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ body {
   display: flex;
   padding: 0;
   margin: 0;
-  margin-right: 332px;
+  
   gap: 40px;
 }
 
@@ -128,7 +128,7 @@ padding: 24px 0;
 .menu-contacts {
   display: flex;
  padding: 0;
-  margin: 0;
+  margin: auto;
 }
 
 .cont:not(:last-child) {
