--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   justify-content: flex-start;
   margin-right: 76px;
+  margin-top: 0;
 }
 
 .logo-link {
@@ -121,10 +122,11 @@ body {
 .addres {
   font-style: normal;
   margin-left: auto;
+  
 }
 
 .menu-contacts {
-  display: flex;
+ display: flex;
  gap: 40px;
 }
 
@@ -135,7 +137,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--letter-spacing);
   color: var(--primary-color);
-
+padding: 24px 0;
 }
 
 img {
@@ -152,6 +154,7 @@ img {
 
 }
 
+
 .title {
   font-family: var(--primary-font);
   font-weight: 700;
@@ -159,7 +162,7 @@ img {
   line-height: 1.07;
   display: block;
   letter-spacing: var(--letter-spacing);
-  margin: 0;
+  margin: auto;
   margin-bottom: 48px;
   color: #ffffff;
   max-width: 496px;
@@ -188,7 +191,8 @@ img {
   min-width: 169px;
   height: 56px;
   border: none;
-
+ justify-content: center;
+margin: auto;
 }
 
 
@@ -375,6 +379,7 @@ img {
   justify-content: center;
   margin-top: 96px;
   margin-bottom: 72px;
+  margin-top: 0;
 }
 
 
@@ -447,3 +452,8 @@ img {
   padding-right: 15px;
 
 }
+
+a { display: block; }
+ul, p {margin: 0; padding: 0;}
+
+h1, h2, h3 { margin: 0;}
